--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
     "file-loader": "^4.0.0",
-    "html-webpack-plugin": "^4.0.0-beta.5",
+    "html-webpack-plugin": "^4.0.0-beta.8",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
+    "webpack-assets-manifest": "^3.1.1",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
@@ -40,8 +41,6 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
     "core-js": "^3.0.1",
-    "pixi.js": "^5.1.2",
-    "webpack-assets-manifest": "^3.1.1",
-    "webpack-manifest-plugin": "^2.0.4"
+    "pixi.js": "^5.1.2"
   }
 }
