--- a/src/assets-manifest.json
+++ b/src/assets-manifest.json
@@ -1,43 +1,37 @@
 {
-  "app.js": "js/app.05e114ed.js",
-  "app.js.map": "js/app.05e114ed.js.map",
-  "js/1.8306de75.chunk.js": "js/1.8306de75.chunk.js",
-  "js/1.8306de75.chunk.js.map": "js/1.8306de75.chunk.js.map",
-  "assets/audio/die.ogg": "assets/audio/die.ogg",
-  "assets/audio/die.wav": "assets/audio/die.wav",
-  "assets/audio/hit.ogg": "assets/audio/hit.ogg",
-  "assets/audio/hit.wav": "assets/audio/hit.wav",
-  "assets/audio/point.ogg": "assets/audio/point.ogg",
-  "assets/audio/point.wav": "assets/audio/point.wav",
-  "assets/audio/swoosh.ogg": "assets/audio/swoosh.ogg",
-  "assets/audio/swoosh.wav": "assets/audio/swoosh.wav",
-  "assets/audio/wing.ogg": "assets/audio/wing.ogg",
-  "assets/audio/wing.wav": "assets/audio/wing.wav",
-  "assets/sprites/0.png": "assets/sprites/0.png",
-  "assets/sprites/1.png": "assets/sprites/1.png",
-  "assets/sprites/2.png": "assets/sprites/2.png",
-  "assets/sprites/3.png": "assets/sprites/3.png",
-  "assets/sprites/4.png": "assets/sprites/4.png",
-  "assets/sprites/5.png": "assets/sprites/5.png",
-  "assets/sprites/6.png": "assets/sprites/6.png",
-  "assets/sprites/7.png": "assets/sprites/7.png",
-  "assets/sprites/8.png": "assets/sprites/8.png",
-  "assets/sprites/9.png": "assets/sprites/9.png",
-  "assets/sprites/backgroundDay.png": "assets/sprites/backgroundDay.png",
-  "assets/sprites/backgroundNight.png": "assets/sprites/backgroundNight.png",
-  "assets/sprites/base.png": "assets/sprites/base.png",
-  "assets/sprites/bluebirdDownflap.png": "assets/sprites/bluebirdDownflap.png",
-  "assets/sprites/bluebirdMidflap.png": "assets/sprites/bluebirdMidflap.png",
-  "assets/sprites/bluebirdUpflap.png": "assets/sprites/bluebirdUpflap.png",
-  "assets/sprites/gameover.png": "assets/sprites/gameover.png",
-  "assets/sprites/message.png": "assets/sprites/message.png",
-  "assets/sprites/pipeGreen.png": "assets/sprites/pipeGreen.png",
-  "assets/sprites/pipeRed.png": "assets/sprites/pipeRed.png",
-  "assets/sprites/redbirdDownflap.png": "assets/sprites/redbirdDownflap.png",
-  "assets/sprites/redbirdMidflap.png": "assets/sprites/redbirdMidflap.png",
-  "assets/sprites/redbirdUpflap.png": "assets/sprites/redbirdUpflap.png",
-  "assets/sprites/yellowbirdDownflap.png": "assets/sprites/yellowbirdDownflap.png",
-  "assets/sprites/yellowbirdMidflap.png": "assets/sprites/yellowbirdMidflap.png",
-  "assets/sprites/yellowbirdUpflap.png": "assets/sprites/yellowbirdUpflap.png",
-  "index.html": "index.html"
+  "images": {
+    "0": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\0.png",
+    "1": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\1.png",
+    "2": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\2.png",
+    "3": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\3.png",
+    "4": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\4.png",
+    "5": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\5.png",
+    "6": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\6.png",
+    "7": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\7.png",
+    "8": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\8.png",
+    "9": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\9.png",
+    "backgroundDay": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\backgroundDay.png",
+    "backgroundNight": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\backgroundNight.png",
+    "base": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\base.png",
+    "bluebirdDownflap": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\bluebirdDownflap.png",
+    "bluebirdMidflap": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\bluebirdMidflap.png",
+    "bluebirdUpflap": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\bluebirdUpflap.png",
+    "gameover": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\gameover.png",
+    "message": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\message.png",
+    "pipeGreen": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\pipeGreen.png",
+    "pipeRed": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\pipeRed.png",
+    "redbirdDownflap": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\redbirdDownflap.png",
+    "redbirdMidflap": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\redbirdMidflap.png",
+    "redbirdUpflap": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\redbirdUpflap.png",
+    "yellowbirdDownflap": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\yellowbirdDownflap.png",
+    "yellowbirdMidflap": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\yellowbirdMidflap.png",
+    "yellowbirdUpflap": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\yellowbirdUpflap.png"
+  },
+  "sounds": {
+    "die": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\die.wav",
+    "hit": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\hit.wav",
+    "point": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\point.wav",
+    "swoosh": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\swoosh.wav",
+    "wing": "D:\\Projects\\flappybirdgame\\src\\assets\\sprites\\wing.wav"
+  }
 }
