--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-async-to-generator": "^7.5.0",
     "@babel/preset-env": "^7.4.2",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.2",
